@@ -1,38 +1,75 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java project to get you started.
- * For more details take a look at the Java Quickstart chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.5/userguide/tutorial_java_projects.html
- */
+// Works with Gradle 5.7 and Java 12
+
+// To run this do:
+// ./gradlew run
+
+// To build a distribution zip:
+// ./gradlew distZip
 
 plugins {
-    // Apply the java plugin to add support for Java
     id 'java'
-
-    // Apply the application plugin to add support for building a CLI application.
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+sourceCompatibility = 11
+targetCompatibility = 11
+
+version = '0.0.1'
+group = 'ehu.isad'
+
+java {
+    modularity.inferModulePath.set(true)
+}
+
+application {
+    mainModule = 'scenebuilder' // name defined in module-info.java
+    mainClass = 'ehu.isad.WhatWeb'
+}
+
+
+
+// ext.moduleName = 'gradlejavafxhelloworld'
+mainClassName = "$moduleName/ehu.isad.WhatWeb"
+
+
+javafx {
+    version = "12"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web']
 }
 
 dependencies {
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.13'
+//    implementation "de.jensd:fontawesomefx-fontawesome:11.0", {
+//        exclude group: 'org.openjfx'
+//    }
 
-    //FontAwesome
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 }
 
-application {
-    // Define the main class for the application.
-    mainClassName = 'ehu.isad.WhatWeb'
+repositories {
+    jcenter()
+    mavenCentral()
+}
+
+def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
+
+run {
+    inputs.property('moduleName', moduleName)
+    doFirst {
+        jvmArgs = jvmArgs.plus(newArgs)
+        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
+                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
+                                '--module', "$mainClassName",
+        ])
+        classpath = files()
+    }
+}
+
+
+
+run {
+    standardInput = System.in
 }
